# SuDel

./: COPYRIGHT.md  Cargo.toml  LICENSE  MANUAL_MACOS.md  MANUAL_WINDOWS.md  README.md  WINDOWS_QUICKSTART.md
.github/workflows/: windows-release.yml
release/: README.md
scripts/: install.bat  install.ps1  install.sh  package_windows_release.ps1  uninstall.bat  uninstall.ps1  uninstall.sh
src/: agent.rs  config.rs  install.rs  logging.rs  main.rs  picker.rs  selection.rs  shred.rs
